--- a/Assets/WebGLTemplates/GameTemplate/TemplateData/style.css
+++ b/Assets/WebGLTemplates/GameTemplate/TemplateData/style.css
@@ -1,8 +1,10 @@
 body,
 html {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    background-color: #333d29;
 }
 
 canvas {
@@ -13,25 +15,36 @@ canvas {
 
 .loading {
     display: none;
-    background-color: black;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    height: 50%;
     width: 100%;
     overflow: auto;
 }
 
 .loading-bar-field {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     height: 40px;
-    width: 200px;
-    background-color: red;
+    width: 50%;
+    ;
+    background-color: transparent;
+    border: 5px solid #c2c5aa;
+
 }
 
 .loading-bar-fill {
-    height: 100%;
-    width: 50%;
-    margin-left: 0;
-    background-color: #ffffff;
+    margin: 5px 5px;
+    height: 80%;
+    width: 100%;
+    background-color: #c2c5aa;
+}
+
+.loading-text {
+    color: #c2c5aa;
+    font-size: 50px;
+    font-family: Arial;
+    font-weight: bolder;
+    height: 50%;
+    width: 100%;
+    text-align: center;
 }
